--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "nuxt": "^3.15.4",
+    "swiper": "^11.2.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
